# summarizer

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  GITHUB_SUPPORT_PLAN.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
summarizer/: __init__.py  cli.py  config.py  console_ui.py  grouping.py  logging.py  runner.py  webex.py  yaml_utils.py
summarizer/common/: __init__.py  config.py  console_ui.py  grouping.py  models.py  runner.py
summarizer/github/: client.py  client_old.py  config.py  graphql.py  rest.py  runner.py  utils.py
summarizer/webex/: __init__.py  client.py  config.py  oauth.py  runner.py
tests/: test_add_users.py  test_github_client_graphql.py  test_github_client_rest.py  test_github_config.py  test_github_utils.py  test_grouping.py  test_models_change.py  test_webex.py  test_webex_oauth.py  test_webex_oauth_config.py  test_yaml_utils.py
webex_summarizer/: __init__.py  __main__.py  cli.py  config.py  console_ui.py  github_utils.py  grouping.py  models.py  runner.py  types.py  webex.py
webexpythonsdk-stubs/webexpythonsdk/: __init__.pyi  exceptions.pyi
webexpythonsdk-stubs/webexpythonsdk/models/: immutable.pyi
