[tool.poetry]
name = "webex-summarizer"
version = "0.1.0"
description = ""
authors = ["Christopher Hart <chart2@cisco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
webexteamssdk = "^1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
