[project]
name = "webex-summarizer"
version = "0.1.0"
description = "Extracts Webex conversations you had that occurred during a particular day."
authors = ["Christopher Hart <chart2@cisco.com>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "typer>=0.15.4",
    "webexpythonsdk>=2.0.4",
]

[project.urls]
"Homepage" = "https://github.com/ChristopherJHart/webex-summarizer"
"Bug Tracker" = "https://github.com/ChristopherJHart/webex-summarizer/issues"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "W",  # pycodestyle warnings
    "C90",# flake8-mccabe complexity
    "N",  # pep8-naming
    "UP", # pyupgrade
    "ANN",# flake8-annotations
    "D",  # pydocstyle
    "T",  # flake8-print (includes T201 for pdb, replacing debug-statements hook)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pyright]
stubPath = "./webexpythonsdk-stubs"
